fix: Overlay Loader z-index

--- a/src/styles/components/loader.module.scss
+++ b/src/styles/components/loader.module.scss
@@ -22,6 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
   & span {
     font-size: 2rem;
     font-weight: bold;
